--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,10 @@
+0.0.1 [2023-03-09]
+- add generic base classes
+  - ezbpy.client.Ezb
+  - ezbpy.parser.EzbData
+- add classes to modules
+  - client.CollectionsAPI
+  - parser.EzbCollections
+
 0.0.0 [2023-03-09]
 - development release
