--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.3 [2023-03-10]
+- add class ezbpy.parser.EzbCollectionsCollection
+- add methods to ezbpy.parser.EzbCollections
+
 0.0.2 [2023-03-09]
 - add attributes to parser.EzbXml
 
