--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.0.4 [2023-03-13]
+- add parameter preserve to ezbpy.parser.EzbCollections.find_*
+
 0.0.3 [2023-03-10]
 - add class ezbpy.parser.EzbCollectionsCollection
 - add methods to ezbpy.parser.EzbCollections
